--- a/components/AsideBar.module.css
+++ b/components/AsideBar.module.css
@@ -1,4 +1,5 @@
 .aside {
+  grid-area: aside;
   display: grid;
   grid-auto-rows: min-content 1fr min-content;
   place-content: center;
@@ -37,8 +38,10 @@
     }
 
     & a {
+      display: block;
       text-decoration: none;
       color: var(--text-primary);
     }
   }
 }
+
