--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,19 @@
 :root {
   --color-accent: #f39413;
+  --color-secondary: #42a294;
   --text-primary: #1f2937;
   --bd-grey: #f2f2f2;
   --bd-grey2: #1f29371a;
+
+  --border-radius: 0.6em;
 }
 
 body {
   margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .t-accent {
@@ -21,6 +26,24 @@ body {
 
 .t-center {
   text-align: center;
+}
+
+.tag {
+  border: 1px solid var(--color-secondary);
+  color: var(--color-secondary);
+  border-radius: 2em;
+  font-size: small;
+  padding: 0.3em 1em;
+  text-decoration: none;
+
+  &:hover {
+    color: white;
+    background-color: var(--color-secondary);
+  }
+
+  & + & {
+    margin-left: 1em;
+  }
 }
 
 .only-mobile {
