--- a/components/AsideBar.module.css
+++ b/components/AsideBar.module.css
@@ -6,15 +6,19 @@
   gap: 2em;
   color: var(--text-primary);
   background-color: var(--bd-grey);
-  max-height: 100dvh;
+  height: calc(100dvh - 4em);
   padding: 2em 0;
+  position: sticky;
+  top: 0;
+  overflow: hidden;
+  z-index: 1;
 }
 
 .aside header {
   text-align: center;
 
   & h3 {
-    margin: .6em 0;
+    margin: 0.6em 0;
     font-weight: 900;
   }
 }
@@ -25,7 +29,7 @@
   margin: 0;
   display: flex;
   flex-direction: column;
-  gap: .8em;
+  gap: 0.8em;
   font-size: larger;
 
   & li {
@@ -44,4 +48,3 @@
     }
   }
 }
-
