--- a/components/SearchPosts.module.css
+++ b/components/SearchPosts.module.css
@@ -1,6 +1,6 @@
 .searchContainer {
   position: relative;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
   width: 100%;
 }
 
@@ -8,7 +8,7 @@
   width: -webkit-fill-available;
   padding: 0.75rem 2.5rem 0.75rem 1rem;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   font-size: 1rem;
   outline: none;
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
