--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -13,6 +13,10 @@
   max-width: 900px;
   padding: 4em 3em 4em 0;
   margin: 0 auto;
+
+  & > footer {
+    margin: 2em 0;
+  }
 }
 
 /* Mobile styles */
