Fix footer nav selector specificity to target direct child elements

--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -30,7 +30,7 @@
       padding: 1em 0;
       font-size: small;
 
-      nav ul {
+      & > nav ul {
         flex-direction: row;
         gap: 0.5em;
         justify-content: center;
