Add no-print class

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,12 @@ hr {
     display: none;
   }
 }
+
+/* Print styles */
+@media print
+{    
+    .no-print, .no-print *
+    {
+        display: none !important;
+    }
+}
