--- a/app/macky/component/Message.module.css
+++ b/app/macky/component/Message.module.css
@@ -19,3 +19,13 @@
 .message p {
   margin: 0.3em 0;
 }
+
+.copyButton {
+  margin-left: auto;
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  gap: 0.2em;
+  color: #2f2f2f;
+}
