Add margin between adjacent buttons and create new TDH guide page

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,6 +47,10 @@ hr {
     color: white;
     background-color: var(--color-secondary);
   }
+
+  & + & {
+    margin-left: 0.5em;
+  }
 }
 
 .only-mobile {
